route.yaml
apiVersion: v1
kind: Route
metadata:
  name:  oidc-proxy
spec:
  to:
    kind: Service
    name: oidc-proxy-service
  tls:
    termination: edge
